--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<head>
+<title> rdhamill's personal github page. </title>
+</head>
+
+<p> This is where I plan on adding a list of projects, accomplishments, contact info and career goals. So stay tuned, and thanks for all the fish. </p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </html>
