Adding new pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+<title> Quiet little corner of learning </title>
 <head>
-<title> rdhamill's personal github page. </title>
+<h1> rdhamill's personal github page.
 </head>
 
 <p> This is where I plan on adding a list of projects, accomplishments, contact info and career goals. So stay tuned, and thanks for all the fish. </p>
