--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 <p> This is where I plan on adding a list of projects, accomplishments, contact info and career goals. So stay tuned, and thanks for all the fish. </p>
 
-<a href="about.html" title="About Me">About Me</a>
-<a href="projects.html" title="Projects">Projects</a>
-<a href="whatsnew.html" title="What's new">What's new</a>
-<a href="contact.html" title="Contact">Contact</a>
+<a href="about.html"><button>About Me</button></a>
+<a href="projects.html"><button>Projects</button></a>
+<a href="whatsnew.html"><button>What's new</button></a>
+<a href="contact.html"><button>Contact</button></a>
 
 
 
