--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+<link rel="stylesheet" href="styles.css"> 
+</head>
 <body>
-<h1>Hello World</h1>
+<h1>Hello Contact!</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<ul>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="about.html">About Me</a></li>
+	<li><a href="projects.html">Projects</a></li>
+	<li><a href="whatsnew.html">What's new</a></li>
+	<li><a href="contact.html">Contact</a></li>
+
+</ul>
 </body>
 </html>
