--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
+
 <html>
-<title> Quiet little corner of learning </title>
+
 <head>
-<h1> rdhamill's personal github page.
+	<title>rdhamill's personal github page. </title>
+	<link rel="stylesheet" href="styles.css"> 
 </head>
 
-<p> This is where I plan on adding a list of projects, accomplishments, contact info and career goals. So stay tuned, and thanks for all the fish. </p>
 
-<a href="about.html"><button>About Me</button></a>
-<a href="projects.html"><button>Projects</button></a>
-<a href="whatsnew.html"><button>What's new</button></a>
-<a href="contact.html"><button>Contact</button></a>
+
+
+<body>	
+		<h1> Github.io page for Rdhamill </h1>	
+
+<ul>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="about.html">About Me</a></li>
+	<li><a href="projects.html">Projects</a></li>
+	<li><a href="whatsnew.html">What's new</a></li>
+	<li><a href="contact.html">Contact</a></li>
+</ul>
+
+
+ <p>This is where I plan on adding a list of projects, accomplishments, contact info and career goals. So stay tuned, and thanks for all the fish.</p> 
+
+</body>	
+
+
+
+
 
 
 
