--- a/whatsnew.html
+++ b/whatsnew.html
@@ -8,7 +8,7 @@
 <p>I'm hosted with GitHub Pages.</p>
 <ul>
 	<li><a href="index.html">Home</a></li>
-	<li><a href="about.html">About Me</a></li>
+	<li><a href="about.html">About</a></li>
 	<li><a href="projects.html">Projects</a></li>
 	<li><a href="whatsnew.html">What's new</a></li>
 	<li><a href="contact.html">Contact</a></li>
