Text edits for pages
Simple text edits on side pages

--- a/whatsnew.html
+++ b/whatsnew.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Hello New!</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>New stuff TBA</p>
 <ul>
 	<li><a href="index.html">Home</a></li>
 	<li><a href="about.html">About</a></li>
