--- a/Contact.html
+++ b/Contact.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Hello Contact!</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Contact info TBA</p>
 <ul>
 	<li><a href="index.html">Home</a></li>
 	<li><a href="about.html">About</a></li>
