--- a/Projects.html
+++ b/Projects.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Hello projects!</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Projects TBA</p>
 <ul>
 	<li><a href="index.html">Home</a></li>
 	<li><a href="about.html">About</a></li>
